<resources>
    <string name="app_name">Collaborative Writing</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_firstname">First Name (Optional)</string>
    <string name="prompt_lastname">Last Name (Optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_registration_failed">Registration failed!</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="title_activity_create_story">Create Story</string>
    <string name="title_activity_details_story"></string>
    <!-- CreateStory -->
    <string name="inputTitle">Title:</string>
    <string name="titleHere">Title here!</string>
    <string name="inputDescription">Description:</string>
    <string name="descriptionHere">Description here!</string>
    <string name="inputTags">Tags: (separate with \';\' )</string>
    <string name="tagsHere">tagx;tagy</string>
    <string name="inputPrivacy">Privacy:</string>
    <string name="inviteFriends">Invite Friends:</string>

    <string-array name="privacySpinner">
        <item>Public</item>
        <item>Friends-only</item>
    </string-array>

    <!-- Friendlist -->
    <string name="title_activity_friendlist">Friendlist</string>
    <string name="inputFriendAdd">Add Friend:</string>
    <string name="friendAddHere">username here!</string>

    <!-- Facebook -->
    <string name="facebook_app_id">793733447392876</string>
    <string name="contribute_to_this_story">Contribute to this story!</string>
    <string name="title_activity_story_detail">StoryDetailActivity</string>
    <string name="title_activity_login_chooser">LoginChooser</string>
    <string name="title_activity_statistic">Statistics</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
